# Project

./: .gitignore  CMakeLists.txt  Centrum.cpp  Centrum.h  DesignByContract.h  HUB.cpp  HUB.h  ProjectDomainTests.cpp  ProjectExporter.cpp  ProjectExporter.h  ProjectImporter.cpp  ProjectImporter.h  ProjectInputTests.cpp  ProjectOutputTests.cpp  ProjectTests.cpp  ProjectUtils.cpp  ProjectUtils.h  README.md  Simulatie.cpp  Simulatie.h  Vaccin.cpp  Vaccin.h  XML.cpp  XML.h  XMLInlezen.cpp  XMLInlezen.h  eigXML.cpp  eigXML.h  main.cpp
testInput/: ErrorMissingAttrCentrum.xml  ErrorMissingAttrHub.xml  ErrorMissingCentrum.xml  ErrorMultipleHubs.xml  ErrorNoCentrums.xml  ErrorWrongTagCentra.xml  ErrorWrongTagHub.xml  ErrorWrongTagSimulatie.xml  ErrorWrongTagVaccinatiecentrum.xml  illegalSimulation1.txt  illegalSimulation1.xml  illegalSimulation10.txt  illegalSimulation10.xml  illegalSimulation11.txt  illegalSimulation11.xml  illegalSimulation12.txt  illegalSimulation12.xml  illegalSimulation13.txt  illegalSimulation13.xml  illegalSimulation14.txt  illegalSimulation14.xml  illegalSimulation15.txt  illegalSimulation15.xml  illegalSimulation16.xml  illegalSimulation2.txt  illegalSimulation2.xml  illegalSimulation3.txt  illegalSimulation3.xml  illegalSimulation4.txt  illegalSimulation4.xml  illegalSimulation5.txt  illegalSimulation5.xml  illegalSimulation6.txt  illegalSimulation6.xml  illegalSimulation7.txt  illegalSimulation7.xml  illegalSimulation8.txt  illegalSimulation8.xml  illegalSimulation9.txt  illegalSimulation9.xml  (+16 more)
testOutput/: OutputGraphicImpression.txt  OutputGraphicImpressionExpected.txt  OutputOneCentrumExpected.txt  OutputStatistics.txt  happyDayExpectedOut.txt  happyDayGraphicImpression.txt  happyDayGraphicImpressionExpected.txt  happyDayOut.txt  happyDayStatistics.txt
